--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
       "require": "./dist/cjs/modules/*.js",
       "import": "./dist/es/modules/*.js"
     },
+    "./functions/*": {
+      "types": "./dist/es/functions/*.d.ts",
+      "require": "./dist/cjs/functions/*.js",
+      "import": "./dist/es/functions/*.js"
+    },
     "./babel-plugin": "./dist/cjs-babel-plugin/babel-plugin.js",
     "./*": "./*"
   },
@@ -47,6 +52,7 @@
   "dependencies": {
     "@babel/helper-plugin-utils": "^7.22.5",
     "@rosmarinus/common-utils": "^2.5.0",
+    "chalk": "^5.3.0",
     "triple-beam": "^1.4.1",
     "tslib": "^2.6.2",
     "winston": "^3.11.0",
