--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@babel/helper-plugin-utils": "^7.22.5",
     "@rosmarinus/common-utils": "^2.5.0",
     "chalk": "^5.3.0",
+    "moment-timezone": "^0.5.43",
     "triple-beam": "^1.4.1",
     "tslib": "^2.6.2",
     "winston": "^3.11.0",
